# CCHIP8

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
docs/: Doxyfile.in
include/: chip8.h  chip8_timer.h
src/: CMakeLists.txt  chip8.c  chip8_timer.c  main.c
tests/: CMakeLists.txt  cchip8_lib_tests.c
